--- a/index.html
+++ b/index.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<script type="text/javascript">
-			alert("First script Block");
-			alert("First script Block - Second Line");
-		</script>
-	</head>
-	<body>
-		<h1>My First JavaScript Web Project</h1>
-		<script type="text/javascript">
-			alert("Second script Block");
-		</script>
-		<p>Mercedes Morales</p>
-		<script type="text/javascript">
-			alert("Third script Block");
-            		doSomething()
-			function doSomething() {
-				alert("Function in Third script Block");
-			}
-		</script>
+<html lang="en-CA">
+<head>
+<title>WebDev</title>
+<style>
+body { background-color:#FBE8A6;margin:0px; }
 
-		<h2>What Can JavaScript Do?</h2>
+#header {
+  height:500px;
+  background-image: url('bg_header.jpg');
+  background-repeat: no-repeat;
+  
+  background-size: cover;
+}
 
-<p>JavaScript can change HTML attribute values.</p>
+#top_header{ background-color:#000000;color:white;padding: 5px; }
+h1 { font-family:verdana;color:#303C6C;text-align:center; }
+#header_subtitle { font-size:24px;color:#303C6C;text-align:center; }
+blockquote{ border:2px solid #F4976C;font-family:courier;padding: 30px;margin: 50px; }
 
-<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
+a:link, a:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 15px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
 
-<button onclick="document.getElementById('myImage').src='../pic_bulbon.gif'">Turn on the light</button>
+a:hover, a:active {
+  background-color: red;
+}
+</style>
+</head>
 
-<img id="myImage" src="../pic_bulboff.gif" style="width:100px">
+<body>
+<div id="header">
+<p id="top_header"><img src="phone_icon.png" alt="Phone" width="20" height="20"> (647) 402-0795 <img src="envelop_icon.png" alt="Phone" width="20" height="20"> mmoraleso@hotmail.com</p>
 
-<button onclick="document.getElementById('myImage').src='../pic_bulboff.gif'">Turn off the light</button>
-	</body>
+<h1>My First Website in HTML</h1>
+<p id="header_subtitle" title="Serving the GTA area"><b>Mercedes Morales - Web Developer</b></p>
+</div>
+
+<blockquote>
+There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
+Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true
+generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence
+structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from
+repetition, injected humour, or non-characteristic words etc.
+</blockquote>
+<hr>
+
+<h2><i>HTML <mark>Links</mark></i></h2>
+<p>HTML <sup>links</sup> are defined with the a tag:</p>
+
+<a href="https://www.w3schools.com">This is a link</a>
+<hr>
+<h2><i>HTML <mark>Images</mark></i></h2>
+<p>HTML <sub>images</sub> are defined with the img tag:</p>
+
+<img src="https://www.w3schools.com/html/w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+
+</body>
 </html>
+
+
+<!-- Some useful notes -->
+<!--
+Relative URL - Links to an image that is hosted within the website. Here, the URL does not include the domain name. If the URL begins without a slash, it will be relative to the current page. Example: src="img_girl.jpg". If the URL begins with a slash, it will be relative to the domain. Example: src="/images/img_girl.jpg".
+
+The HTML <abbr> tag defines an abbreviation or an acronym, like "HTML", "CSS", "Mr.", "Dr.", "ASAP", "ATM".
+Marking abbreviations can give useful information to browsers, translation systems and search-engines.
+
+HTML <address> for Contact Information
+
+-->
+
+
+
+<!-- Review later -->
+<!--
+https://spec.whatwg.org/
+https://html.spec.whatwg.org/#is-this-html5?  : history
+https://html.spec.whatwg.org/#terminology
+
+
+Read from the java script book chapter 1 -4 for monday 25
+
+-->
