--- a/index.html
+++ b/index.html
@@ -1,91 +1,99 @@
 <!DOCTYPE html>
-<html lang="en-CA">
+<html>
 <head>
-<title>WebDev</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body { background-color:#FBE8A6;margin:0px; }
-
-#header {
-  height:500px;
-  background-image: url('bg_header.jpg');
-  background-repeat: no-repeat;
-  
-  background-size: cover;
+* {
+  box-sizing:border-box;
 }
 
-#top_header{ background-color:#000000;color:white;padding: 5px; }
-h1 { font-family:verdana;color:#303C6C;text-align:center; }
-#header_subtitle { font-size:24px;color:#303C6C;text-align:center; }
-blockquote{ border:2px solid #F4976C;font-family:courier;padding: 30px;margin: 50px; }
+.left {
+  background-color:#2196F3;
+  padding:20px 10px;
+  float:left;
+  width:35%; /* The width is 20%, by default */
+}
 
-a:link, a:visited {
-  background-color: #f44336;
+.main {
+  background-color:#f1f1f1;
+  padding:20px;
+  float:left;
+  width:30%; /* The width is 60%, by default */
+}
+
+.right {
+  background-color:#4CAF50;
+  padding:20px 10px;
+  float:left;
+  width:35%; /* The width is 20%, by default */
+}
+
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  <!-- background-color: red; -->
+}
+
+.left li {
+  float: left;
+}
+
+.right li {
+  float: right;
+}
+
+li a {
+  display: block;
   color: white;
-  padding: 15px 25px;
   text-align: center;
+  padding: 16px;
   text-decoration: none;
-  display: inline-block;
 }
 
-a:hover, a:active {
-  background-color: red;
+.right li a:hover {
+  background-color: #111111;
+}
+
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/* Use a media query to add a break point at 800px: */
+@media screen and (max-width:800px) {
+  .left, .main, .right {
+    width:100%; /* The width is 100%, when the viewport is 800px or smaller */
+  }
 }
 </style>
 </head>
-
 <body>
-<div id="header">
-<p id="top_header"><img src="phone_icon.png" alt="Phone" width="20" height="20"> (647) 402-0795 <img src="envelop_icon.png" alt="Phone" width="20" height="20"> mmoraleso@hotmail.com</p>
 
-<h1>My First Website in HTML</h1>
-<p id="header_subtitle" title="Serving the GTA area"><b>Mercedes Morales - Web Developer</b></p>
+
+<div class="left">
+  	<ul>
+	  <li><a href="#home"><img src="phone_icon1.png" alt="Phone" width="14" height="12"> (647) 402-0795</a></li>
+	  <li><a href="#news"><img src="envelop_icon1.png" alt="Email" width="14" height="12"> mmoraleso@hotmail.com</a></li>
+	</ul>
 </div>
 
-<blockquote>
-There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
-by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of
-Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
-All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true
-generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence
-structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from
-repetition, injected humour, or non-characteristic words etc.
-</blockquote>
-<hr>
+<div class="main">
+  <img src="logo.png" alt="Logo" width="80" height="46" class="logo">
+</div>
 
-<h2><i>HTML <mark>Links</mark></i></h2>
-<p>HTML <sup>links</sup> are defined with the a tag:</p>
-
-<a href="https://www.w3schools.com">This is a link</a>
-<hr>
-<h2><i>HTML <mark>Images</mark></i></h2>
-<p>HTML <sub>images</sub> are defined with the img tag:</p>
-
-<img src="https://www.w3schools.com/html/w3schools.jpg" alt="W3Schools.com" width="104" height="142">
+<div class="right">
+	<ul>
+	  <li><a href="#home">Home</a></li>
+	  <li><a href="#news">News</a></li>
+	  <li><a href="#contact">Contact</a></li>
+	  <li><a href="#about">About</a></li>
+	</ul>
+</div>
 
 </body>
 </html>
-
-
-<!-- Some useful notes -->
-<!--
-Relative URL - Links to an image that is hosted within the website. Here, the URL does not include the domain name. If the URL begins without a slash, it will be relative to the current page. Example: src="img_girl.jpg". If the URL begins with a slash, it will be relative to the domain. Example: src="/images/img_girl.jpg".
-
-The HTML <abbr> tag defines an abbreviation or an acronym, like "HTML", "CSS", "Mr.", "Dr.", "ASAP", "ATM".
-Marking abbreviations can give useful information to browsers, translation systems and search-engines.
-
-HTML <address> for Contact Information
-
--->
-
-
-
-<!-- Review later -->
-<!--
-https://spec.whatwg.org/
-https://html.spec.whatwg.org/#is-this-html5?  : history
-https://html.spec.whatwg.org/#terminology
-
-
-Read from the java script book chapter 1 -4 for monday 25
-
--->
