--- a/index.html
+++ b/index.html
@@ -1,99 +1,58 @@
-<!DOCTYPE html>
 <html>
+
+
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-* {
-  box-sizing:border-box;
-}
 
-.left {
-  background-color:#2196F3;
-  padding:20px 10px;
-  float:left;
-  width:35%; /* The width is 20%, by default */
-}
+    <title>JavaScript to do list</title>
 
-.main {
-  background-color:#f1f1f1;
-  padding:20px;
-  float:left;
-  width:30%; /* The width is 60%, by default */
-}
+    <link rel="stylesheet" href="style.css">
 
-.right {
-  background-color:#4CAF50;
-  padding:20px 10px;
-  float:left;
-  width:35%; /* The width is 20%, by default */
-}
-
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  <!-- background-color: red; -->
-}
-
-.left li {
-  float: left;
-}
-
-.right li {
-  float: right;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-}
-
-.right li a:hover {
-  background-color: #111111;
-}
-
-.logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-
-/* Use a media query to add a break point at 800px: */
-@media screen and (max-width:800px) {
-  .left, .main, .right {
-    width:100%; /* The width is 100%, when the viewport is 800px or smaller */
-  }
-}
-</style>
 </head>
+
+
+
 <body>
 
 
-<div class="left">
-  	<ul>
-	  <li><a href="#home"><img src="phone_icon1.png" alt="Phone" width="14" height="12"> (647) 402-0795</a></li>
-	  <li><a href="#news"><img src="envelop_icon1.png" alt="Email" width="14" height="12"> mmoraleso@hotmail.com</a></li>
-	</ul>
-</div>
+    <div class="todo-wrapper">
 
-<div class="main">
-  <img src="logo.png" alt="Logo" width="80" height="46" class="logo">
-</div>
+        <h2>My to-do list</h2>
 
-<div class="right">
-	<ul>
-	  <li><a href="#home">Home</a></li>
-	  <li><a href="#news">News</a></li>
-	  <li><a href="#contact">Contact</a></li>
-	  <li><a href="#about">About</a></li>
-	</ul>
-</div>
+        <p>Double-click an item to mark it complete.</p>
+
+        <form name="todo-adder">
+
+            <input type="text" id="todo-entry-box" />
+
+        </form>
+
+        <button id="add-button" class="pretty-button">Add</button>
+
+        <br />
+
+        <ol id="todo-list">
+
+        </ol>
+
+        <div id="control-wrapper">
+
+            <button id="clear-completed-button" class="pretty-button">Clear Completed</button>
+
+            <button id="empty-button" class="pretty-button">Empty List</button>
+
+            <button id="save-button" class="pretty-button">Save List</button>
+
+        </div>
+
+    </div>
+
+
+    <script src="script.js"></script>
+
 
 </body>
+
+
+
 </html>
